--- a/src/app/core-application/header/header.component.html
+++ b/src/app/core-application/header/header.component.html
@@ -4,7 +4,7 @@
     </a>
     <div class="row">
         <div class="col">
-            <span class="navbar-text" style="width: 100px;">
+            <span class="navbar-text" style="width: 100px;text-align:right">
                {{nombre}}
             </span>
         </div>
