--- a/src/app/core-application/sidebar/sidebar.component.html
+++ b/src/app/core-application/sidebar/sidebar.component.html
@@ -7,7 +7,7 @@
     <ul class="list-group txt-normal">
 
         <li class="list-group-item d-flex justify-content-between align-items-center hover-tag" (click)="goTo(1)">
-            Dashboard
+            Resumen
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center hover-tag" (click)="goTo(2)">
             Mapa
@@ -17,6 +17,9 @@
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center hover-tag" (click)="goTo(4)">
             Asignar Paquete
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center hover-tag" (click)="goTo(5)">
+            Leer NIC
         </li>
     </ul>
 </div>
