--- a/src/app/core-application/sidebar/sidebar.component.html
+++ b/src/app/core-application/sidebar/sidebar.component.html
@@ -13,13 +13,16 @@
             Mapa
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center hover-tag" (click)="goTo(3)">
-            Cargar Paquete
+            Cargar Facturas
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center hover-tag" (click)="goTo(4)">
-            Asignar Paquete
+            Asignar Facturas
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center hover-tag" (click)="goTo(5)">
             Leer NIC
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center hover-tag" (click)="goTo(6)">
+            Facturas por usuario
         </li>
     </ul>
 </div>
