--- a/src/app/core-application/body/deliverer/deliverer.component.html
+++ b/src/app/core-application/body/deliverer/deliverer.component.html
@@ -2,10 +2,21 @@
 
 <div class="container espacios">
 
+  
+    <div class="row" >
+        <div class="col-1" style="min-width: 100px;">
+            <h2>Asignar</h2>
+        </div>
+        <div class="col-9">
+            <p style="margin-top: 13px;margin-left:25px">Asigne las facturas a un responsable</p>
+        </div>
+      </div>
+      <hr style="margin-top: -7px;">
+
   <div class="row">
     <div class="col-lg-6">
       <label for="staticEmail2" class="sr-only"></label>
-      <input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="Digita la identificación">
+      <input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="Digita la identificación del usuario">
     </div>
     <div class="col-lg-4">
       <label for="inputPassword2" class="sr-only"></label>
