--- a/src/app/core-application/body/facts-by-user/facts-by-user.component.html
+++ b/src/app/core-application/body/facts-by-user/facts-by-user.component.html
@@ -1,20 +1,20 @@
 
 <div class="container espacios">
+
     <div class="row" >
-        <div class="col-3" style="min-width: 100px;">
-            <h2>Leer Facturas</h2>
+        <div class="col-4" style="min-width: 100px;">
+            <h2>Facturas asignadas</h2>
         </div>
-        <div class="col-9">
+        <div class="col-7">
             <p style="margin-top: 13px;margin-left:-70px;">Lea las facturas manualmente desde la aplicacion web</p>
         </div>
       </div>
       <hr style="margin-top: -7px;">
 
-
   <div class="row">
     <div class="col-lg-6">
       <label for="staticEmail2" class="sr-only"></label>
-      <input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="Ingrese el NIC de la factura">
+      <input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="Ingrese el documento de identidad del usuario">
     </div>
     <div class="col-lg-4">
       <label for="inputPassword2" class="sr-only"></label>
@@ -32,5 +32,4 @@
     [enableSorting]="true" [enableFilter]="true"></ag-grid-angular>
 
 </div>
-
 
