--- a/src/app/core-application/body/read-facts/read-facts.component.html
+++ b/src/app/core-application/body/read-facts/read-facts.component.html
@@ -18,10 +18,10 @@
     </div>
     <div class="col-lg-4">
       <label for="inputPassword2" class="sr-only"></label>
-      <input type="text" class="form-control" placeholder="Ej: 1234567" [(ngModel)]="idUser" name="id">
+      <input type="text" class="form-control" placeholder="Ej: 1234567" [(ngModel)]="NIC" name="nic">
     </div>
     <div class="col-lg-2">
-      <button class="btn btn-primary mb-2" type="button" (click)="search()">Siguiente</button>
+      <button class="btn btn-primary mb-2" type="button" (click)="read()">Siguiente</button>
     </div>
 
   </div>
