--- a/src/app/core-application/body/read-facts/read-facts.component.html
+++ b/src/app/core-application/body/read-facts/read-facts.component.html
@@ -29,7 +29,7 @@
 
 <div class="container espacios">
   <ag-grid-angular class="ag-theme-balham" style="width: 100%;height: 480px" [columnDefs]="columnDefs" (gridReady)="onGridReady($event)"
-    [enableSorting]="true" [enableFilter]="true"></ag-grid-angular>
+    [enableSorting]="true" [enableFilter]="true" [enableColResize]="true" [localeText]="localeText"></ag-grid-angular>
 
 </div>
 
