--- a/src/app/user-management/alerts/alerts.component.html
+++ b/src/app/user-management/alerts/alerts.component.html
@@ -1,4 +1,4 @@
-<div class="row alert">
+<div class="row {{color}}">
     <div class="col-1 warning"></div>
     <div class="col-10 text"> 
       <h6 style="font-weight: bold">{{title}}</h6>
