--- a/src/app/user-management/landing-page/landing-page.component.html
+++ b/src/app/user-management/landing-page/landing-page.component.html
@@ -20,9 +20,9 @@
       
         <div class="form">
           <button type="button" class="btn btn-primary btn-lg btn-block" (click)="login()">Iniciar Sesión</button>
-          <hr>
-          <button type="button" class="btn btn-success btn-lg btn-block" (click)="signIn()">Registrate</button>
-        </div>
+     <!--      <hr>
+          <button type="button" class="btn btn-success btn-lg btn-block" disabled="true" (click)="signIn()">Registrate</button>
+      -->   </div>
       </div>
     </div>
 
