--- a/src/app/core-application/body/deliverer/deliverer.component.html
+++ b/src/app/core-application/body/deliverer/deliverer.component.html
@@ -2,31 +2,43 @@
 
 <div class="container espacios">
 
-  
-    <div class="row" >
-        <div class="col-1" style="min-width: 100px;">
-            <h2>Asignar</h2>
-        </div>
-        <div class="col-9">
-            <p style="margin-top: 13px;margin-left:25px">Asigne las facturas a un responsable</p>
-        </div>
-      </div>
-      <hr style="margin-top: -7px;">
 
   <div class="row">
-    <div class="col-lg-6">
-      <label for="staticEmail2" class="sr-only"></label>
-      <input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="Digita la identificación del usuario">
+    <div class="col-1" style="min-width: 100px;">
+      <h2>Asignar</h2>
     </div>
-    <div class="col-lg-4">
-      <label for="inputPassword2" class="sr-only"></label>
-      <input type="text" class="form-control" placeholder="Ej: 1234567" [(ngModel)]="idUser" name="id">
+    <div class="col-9">
+      <p style="margin-top: 13px;margin-left:25px">Asigne las facturas a un responsable</p>
     </div>
-    <div class="col-lg-2">
-      <button class="btn btn-primary mb-2" type="button" (click)="search()">Siguiente</button>
-    </div>
-
   </div>
+  <hr style="margin-top: -7px;">
+
+  <!--  <div class="row">
+      <div class="col-lg-6">
+        <label for="staticEmail2" class="sr-only"></label>
+        <input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="Digita la identificación del usuario">
+      </div>
+      <div class="col-lg-4">
+        <label for="inputPassword2" class="sr-only"></label>
+        <input type="text" class="form-control" placeholder="Ej: 1234567" [(ngModel)]="idUser" name="id">
+      </div>
+      <div class="col-lg-2">
+        <button class="btn btn-primary mb-2" type="button" (click)="search()">Siguiente</button>
+      </div>
+
+    </div> -->
+</div>
+
+<div class="row" style="width: 99.5%;margin-left:auto;margin-right:auto" *ngIf="!showInformation">
+  <div class="col-lg">
+      <div class="espacios" style="width: 100%">
+          <ag-grid-angular class="ag-theme-balham" style="width: 95%;height: 435px;margin-left:auto;margin-right:auto;margin-top:0px"
+          [columnDefs]="columnUsers" (selectionChanged)="onSelectChanged($event)" [localeText]="localeText" [rowSelection]="rowSelection"
+          [rowMultiSelectWithClick]="true" [enableColResize]="true"  [rowData]="rowData" (gridReady)="onGridThreeReady($event)" [enableSorting]="true" [enableFilter]="true"></ag-grid-angular>
+      </div>
+  </div>
+  <div class="col-lg"></div>
+ 
 </div>
 
 <div class="row" style="width: 99.5%;margin-left:auto;margin-right:auto" *ngIf="showInformation">
@@ -36,11 +48,14 @@
         <div class="col-lg-6">
           <h4>Facturas Leidas</h4>
         </div>
-        <div class="col-lg-6"><p style="margin-top: 6px;">Seleccione o deseleccione</p></div>
+        <div class="col-lg-6">
+          <p style="margin-top: 6px;">Seleccione o deseleccione</p>
+        </div>
       </div>
       <div class="row">
         <ag-grid-angular class="ag-theme-balham" style="width: 95%;height: 435px;margin-left:auto;margin-right:auto;margin-top:0px"
-          [columnDefs]="columnDefs" (selectionChanged)="onSelectionChanged($event)" [rowSelection]="rowSelection"  [rowMultiSelectWithClick]="true" [rowData]="rowData" (gridReady)="onGridReady($event)" [enableSorting]="true" [enableFilter]="true"></ag-grid-angular>
+          [columnDefs]="columnDefs" (selectionChanged)="onSelectionChanged($event)" [localeText]="localeText" [rowSelection]="rowSelection"
+          [rowMultiSelectWithClick]="true" [rowData]="rowData" (gridReady)="onGridReady($event)" [enableSorting]="true" [enableFilter]="true"></ag-grid-angular>
       </div>
     </div>
   </div>
@@ -50,11 +65,13 @@
         <div class="col-lg-6">
           <h4>Facturas Asignadas</h4>
         </div>
-        <div class="col-lg-6"><p style="margin-top: 6px;">Visualizar</p></div>
+        <div class="col-lg-6">
+          <p style="margin-top: 6px;">Visualizar</p>
+        </div>
       </div>
       <div class="row">
         <ag-grid-angular class="ag-theme-balham" style="width: 95%;height: 435px;margin-left:auto;margin-right:auto;margin-top:0px"
-          [columnDefs]="columnDefs" (gridReady)="onGridTwoReady($event)" [enableSorting]="true" [enableFilter]="true"></ag-grid-angular>
+          [columnDefs]="columnDefs" (gridReady)="onGridTwoReady($event)" [enableSorting]="true" [localeText]="localeText" [enableFilter]="true"></ag-grid-angular>
       </div>
 
     </div>
