--- a/src/app/core-application/body/facts-by-user/facts-by-user.component.html
+++ b/src/app/core-application/body/facts-by-user/facts-by-user.component.html
@@ -12,7 +12,7 @@
       <hr style="margin-top: -7px;">
 
   <div class="row">
-    <div class="col-lg-6">
+    <div class="col-lg-5">
       <label for="staticEmail2" class="sr-only"></label>
       <input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="Ingrese el documento de identidad del usuario">
     </div>
@@ -20,8 +20,11 @@
       <label for="inputPassword2" class="sr-only"></label>
       <input type="text" class="form-control" placeholder="Ej: 1234567" [(ngModel)]="idUser" name="id">
     </div>
-    <div class="col-lg-2">
-      <button class="btn btn-primary mb-2" type="button" (click)="search()">Siguiente</button>
+    <div class="col-lg-1">
+      <button class="btn btn-primary mb-2" type="button" (click)="getData()">Consultar</button>
+    </div>
+    <div class="col-lg-1">
+      <button class="btn btn-danger mb-2" type="button" style="margin-left:10px;" (click)="deleteFacts()">Borrar todas</button>
     </div>
 
   </div>
@@ -29,7 +32,7 @@
 
 <div class="container espacios">
   <ag-grid-angular class="ag-theme-balham" style="width: 100%;height: 480px" [columnDefs]="columnDefs" (gridReady)="onGridReady($event)"
-    [enableSorting]="true" [enableFilter]="true"></ag-grid-angular>
+    [enableSorting]="true" [enableFilter]="true" [enableColResize]="true" [localeText]="localeText"></ag-grid-angular>
 
 </div>
 
