--- a/src/app/core-application/body/upload-items/upload-items.component.html
+++ b/src/app/core-application/body/upload-items/upload-items.component.html
@@ -1,4 +1,4 @@
-<div class="floating-alert" *ngIf="cargando" (click)="cargando = false">
+<div class="floating-alert" *ngIf="cargando || error" (click)="error = false">
   <app-generic-notify [title]="title" [subtitle]="subtitle"></app-generic-notify>
 </div>
 
@@ -7,32 +7,28 @@
         <div class="col-1" style="min-width: 100px;">
             <h2>Cargar</h2>
         </div>
-        <div class="col-9">
+        <div class="col-8">
             <p style="margin-top: 13px;margin-left: 10px;">Cargue sus archivos de forma manual o automáticamente</p>
         </div>
+        <div class="col-2">
+            <button class="btn btn-primary mb-2" type="button" style="margin-top: 5px;" (click)="options()" >Opciones</button>
+        </div>
       </div>
-      <hr style="margin-top: -7px;">
-  <div class="row">
-    <div class="col-lg-2">
-      <label for="staticEmail2" class="sr-only"></label>
-      <input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="Subir facturas en .xlsx">
-    </div>
-    <div class="col-lg-3">
-      <label for="inputPassword2" class="sr-only"></label>
-      <input class="form-control" type="file" style="height: 43px;" (change)="incomingfile($event)" placeholder="Upload file" accept=".xlsx">
-    </div>
-    <div class="col-lg-2">
-      <button class="btn btn-primary mb-2" type="button" (click)="Upload()">Subir archivo</button>
-    </div>
-    <div class="col-lg-3">
-      <label for="staticEmail2" class="sr-only"></label>
-      <input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="Subir facturas Manualmente">
-    </div>
-    <div class="col-lg-1">
-      <button class="btn btn-danger mb-2" type="button" (click)="showForm=true">Ingreso manual</button>
-    </div>
-  </div>
+      <hr style="margin-top: -7px;" *ngIf="option">
+      <div class="row" *ngIf="option">
+        <div class="col-lg-5">
+          <label for="inputPassword2" class="sr-only"></label>
+          <input class="form-control" lang="es" type="file" style="height: 43px" (change)="incomingfile($event)" placeholder="Cargar" accept=".xlsx">
+        </div>
+        <div class="col-lg-2">
+          <button class="btn btn-primary mb-2" type="button" (click)="Upload()"  [class.disabled]="cargando">Cargar archivo</button>
+        </div>
+        <div class="col-lg-1">
+          <button class="btn btn-danger mb-2" type="button" (click)="showForm=true" [class.disabled]="cargando">Ingreso manual</button>
+        </div>
+      </div>
 </div>
+<div class="container loader" *ngIf=cargando></div>
 
 <div class="container espacios" *ngIf="showForm" style="padding: 15px;">
   <h2>Cargar factura manualmente</h2>
@@ -99,6 +95,5 @@
 
 <div class="container espacios" *ngIf="showTable">
   <ag-grid-angular class="ag-theme-balham" style="width: 100%;height: 480px" [columnDefs]="columnDefs" (gridReady)="onGridReady($event)"
-    [enableSorting]="true" [enableFilter]="true"></ag-grid-angular>
-
+    [enableSorting]="true" [enableColResize]="true" [enableFilter]="true"  [localeText]="localeText"></ag-grid-angular>
 </div>
