--- a/src/app/user-management/alerts/alerts.component.css
+++ b/src/app/user-management/alerts/alerts.component.css
@@ -1,6 +1,15 @@
 .alert{
+    color: darkgray;
     background-color: rgb(253, 255, 112);
     border: solid rgb(251, 255, 0);
+    border-radius: 10px;
+    width: 100%;
+    height:65px;
+}
+.success{
+    color:white;
+    background-color:#007bff;
+    border: solid #007bff;
     border-radius: 10px;
     width: 100%;
     height:65px;
@@ -15,7 +24,8 @@
     
 }
 .text{
-    color: darkgray;
+    padding-top:8px;
+    
     font-family: Arial, Helvetica, sans-serif;
     font-size: 8pt;
 }
@@ -25,17 +35,7 @@
     background-size: contain;
     background-position: center;
     margin-top:8px;
-    width: 20px;
-    height: 20px;
-    padding: 0px
-}
-.close-btn:hover{
-    background-image: url('./../../../assets/images/close-hover.png');
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    margin-top:8px;
-    width: 20px;
-    height: 20px;
+    width: 15px;
+    height: 15px;
     padding: 0px
 }
